# scc-django-blog-engine

./: .gitignore  LICENSE  README.md  pyproject.toml
blog_engine/: __init__.py  admin.py  apps.py  conf.py  urls.py  views.py
blog_engine/models/: __init__.py  comments.py  media.py  posts.py
tests/: settings.py  test_models.py  urls.py
